# Laborator_SD

lab1/: Lab1.rar
lab1/1_1_142_Florea_George/: 1_1.cbp  main.cpp
lab1/1_2_142_Florea_George/: 1_2.cbp  1_2.depend  main.cpp
lab1/1_3_142_Florea_George/: 1_3.cbp  1_3.depend  main.cpp
lab1/2_1_142_Florea_George/: 2_1.cbp  2_1.depend  main.cpp
lab1/2_2_142_Florea_George/: 2_2.cbp  2_2.depend  2_2.layout  main.cpp
lab1/3_1_142_Florea_George/: 3_1.cbp  3_1.depend  3_1.layout  CMakeLists.txt  main.cpp
lab2/1_1/: CMakeLists.txt  main.cpp
lab2/1_2/: CMakeLists.txt  main.cpp
lab2/2_1/: CMakeLists.txt  main.cpp
lab2/3_1/: CMakeLists.txt  main.cpp
lab2/test/: main.cpp  test.depend  test.layout
