cmake_minimum_required(VERSION 3.21)
project(3_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(3_1
        .idea/.gitignore
        .idea/3_1.iml
        .idea/modules.xml
        .idea/workspace.xml
        bin/Debug/3_1.exe
        obj/Debug/main.o
        3_1.cbp
        3_1.depend
        main.cpp)
